# exov6

./: .clang-format  .clang-tidy  .clang-tidy-cpp17  .clang-tidy-cpp23  .cmake-format.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BUGS  BUILD_DIRECTORY_BEST_PRACTICES.md  BUILD_INTEGRATION.md  BUILD_PROGRESS.md  BUILD_PROGRESS_SESSION3.md  BUILD_STATUS_x86_64.md  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.backup  CMakeLists_reorganized.txt  CMakePresets.json  CODEX.md  CONTAINER_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  CPP23_CONVERSION_GUIDE.md  DEEP_ANALYSIS.md  DOCUMENTATION.md  DOCUMENTATION_SYNTHESIS_COMPLETE.md  Dockerfile  EXOV6_C17_QUALITY_IMPROVEMENTS.md  FINAL_POSIX_REPORT.md  GEMINI.md  GRAND_SYNTHESIS.md  GRANULAR_IMPLEMENTATION_ROADMAP.md  IPC.md  LICENSE  LOCK_MIGRATION_INVENTORY.txt  MODERNIZATION_ROADMAP.md  Makefile  Makefile.backup  (+122 more)
demos/: CMakeLists.txt  affine_channel_demo.c  beatty_dag_demo.c  chan_beatty_rcrs_demo.c  chan_dag_supervisor_demo.c  char_driver_demo.c  cooperating_microkernel_demo.c  dag_demo.c  ddekit_port_demo.c  demo_standalone.c  exo_stream_demo.c  fbdev_demo.c  fib_big_demo.c  hello_channel.c  hello_kernel.c  hv_demo.c  ipc_distributed_compute.c  ipc_producer_consumer.c  libos_posix_extra_test.c  msgqueue_demo.c  posix_compliance_test.c  qspin_demo.c  typed_chan_demo.c  typed_chan_recv.c  typed_chan_send.c
demos/examples/: fib_big_demo.c
demos/ipc/: CMakeLists.txt  advanced_ipc_showcase.c  demo_ipc_showcase.c
demos/kernel/: CMakeLists.txt  demo_integrated_mathematical_kernel.c
kernel/: CMakeLists.txt  README.md  arbitrate.c  arbitrate.c.backup  arbitrate.h  asm_stubs.c  bcache_io.c  beatty_sched.c  beatty_sched.h  bio.d  bootmain.c  buffer_cache.c  buffer_cache_design.md  cap.c  cap.h  cap_check.c  cap_check.h  cap_formula.c  cap_ipc.c  cap_mem.c  cap_security.c  cap_security.d  cap_security.h  cap_table.c  capability_cache.c  capability_cache_adaptive.c  capability_lockfree.c  capability_simd.c  capability_simd_adaptive.c  capability_v2.c  capnp_helpers.c  chan.h  console.d  cpu_flags.c  crypto.c  crypto.d  dag.h  dag_executor.c  dag_pdac.c  dag_sched.c  (+129 more)
kernel/boot/: boot_kernel.S  bootasm.S  bootasm_minimal.S  bootmain.c  entry.S  entry_minimal.S  main.c  main64.c  main_minimal.c
kernel/capability/: capability_lattice.c
kernel/core/: secure_multiplex.c
kernel/drivers/: console.c  ddekit.c  driver.c  ioapic.c  kbd.c  lapic.c  memide.c  mp.c  picirq.c  uart.c
kernel/exec/: binfmt_loader.c
kernel/fs/: bio.c  fs.c  ide.c  log.c  minix3.c  procfs.c
kernel/hypervisor/: hypervisor.c  hypervisor.h
kernel/include/: defs.h  spinlock.h
kernel/ipc/: cap.c  cap_mem.c  cap_table.c  capnp_helpers.c  capnp_kernel.c  capnp_lattice_engine.c  chan.c  endpoint.c  exo.c  exo_cpu.c  exo_disk.c  exo_ipc.c  exo_ipc_queue.c  exo_stream.c  fastipc.c  lattice_ipc.c  lattice_kernel.c  serialization.c  serialization_simple.c  sys_ipc.c  unified_channel.c  unified_ipc.c  zero_copy.c
kernel/mem/: kalloc.c  libbaremetal.c  mm.h  mmu64.c  vm.c
kernel/prof/: profiler.c
kernel/resurrection/: README.md  reincarnation_server.c  reincarnation_server.h
kernel/sched/: beatty_dag_stream.c  beatty_sched.c  context_switch.c  dag_sched.c  proc.c
kernel/sync/: LOCK_TYPES.md  Makefile  Makefile.dag_tests  adaptive_mutex.c  bench_dag.c  bench_lwkt_token.c  bench_qspinlock.c  dag.c  genetic_lock_evolution.c  genetic_lock_evolution.h  lwkt_token.c  modern_locks.c  priority.c  qspinlock.c  qspinlock.h  quantum_lock.c  rcu.c  sleeplock.c  spinlock.c  spinlock_c17.c  test_dag.c  test_lwkt_token.c  test_qspinlock.c  turnstile.c  ultimate_lock_synthesis.h  unified_lock.c  zerocopy_cow_dag.c  zerocopy_cow_dag.h
kernel/sys/: abi_versioning.c  abi_versioning.h  capsicum.c  capsicum.h  (+43 more)
lib/: CMakeLists.txt  entry.S  exception.S  exception.c  fd.c  fork.c  fs_client.c  libmain.c  mmap.c  pipe.c  print.c  scheduler.c  service.c  spawn.c  syscall.c  thread_switch.S  umalloc.c
libos/: ABI.md  ABI_DEFINITION.md  ABI_LINUX_REFERENCE.md  CMakeLists.txt  POSIX_COVERAGE.md  README  aether_nn.c  affine_runtime 2.c  affine_runtime.c  affine_runtime.h  cap.c  capnp_helpers.c  capwrap.c  chan.c  chan.h  compatibility_roadmap.md  ddekit.c  dlfcn.c  driver.c  driver.h  env.c  errno.c  exo.h  exo_ipc.h  exokernel.h  file.c  file.h  fs.c  fs.h  fs_ufs.c  inet.c  ipc.c  ipc_queue.c  irq_client.c  lambda_cap.c  libfs.h  libfs_stubs.c  msg_router.c  posix 2.c  posix.c  (+19 more)
minimal_kernel/: CMakeLists.txt  boot.S  kernel.c
proto/: CMakeLists.txt  driver.capnp  example.y  hello.capnp
tests/: CMakeLists.txt  Makefile  benchmarks.bats  exokernel.h  libos_host_stubs.c  meson.build  sleep1.p  test_arbitrate.py  test_beatty_cycle.py  test_build_script.py  test_cap_entry_cpp.py  test_cap_newtypes.py  test_cap_revoke.py  test_cap_types.py  test_chan_endpoint.py  test_dag_cycle.py  test_door.py  test_encrypt_mod.py  test_exo_ipc_direct.py  test_exo_recv_timed.py  test_flow_pid.py  test_formal_models.py  test_iommu.py  test_irq.py  test_lattice_channel_dag.py  test_lattice_dag.py  test_lattice_ipc.py  test_libnstr_graph.py  test_libos_env.py  test_linux_abi_comprehensive.c  test_locks.py  test_lockstress.py  test_mailbox_isolation.py  test_octonion.py  test_posix_apis.py  test_posix_compat.py  test_ptrace_concurrent.py  test_recv_timed.py  test_scripts_simulate.py  test_security_audit.py  (+12 more)
tools/: CMakeLists.txt  __init__.py  compiler_utils.c  compiler_utils.h  feuerbird_metrics.c  feuerbird_metrics.h  gdbutil  gdbutil.py  header_graph.py  lock_sim.py  mkfs.c  mkfs_standalone.c  ncc.c  phoenix_metrics.c  phoenix_metrics.h  ptrace.c  run_docs_pipeline.py  scheduler_visualizer.py
user/: ABI.md  BOOTSTRAP.md  CMakeLists.txt  CMakeLists_modern.txt  README.md  alias.c  ar.c  asa.c  at.c  awk.c  banner.c  basename.c  batch.c  bc.c  bg.c  bzip2.c  c17.c  cal.c  caplib.c  caplib_example.c  cat.c  cc.c  cd.c  chan.c  chgrp.c  chmod.c  chown.c  cksum.c  cmake.c  cmp.c  comm.c  command.c  compress.c  cp.c  cpio.c  cron.c  csplit.c  ctags.c  curl.c  cut.c  (+188 more)
(+1468 files in other folders)
